@@ -69,6 +69,8 @@ Jump Start Changelog
 * Improvement: Function `themeblvd_related_posts()` will now allow you to pass any post type and associated taxonomy.
 * Improvement: Now using `fa-shopping-basket` icon throughout theme instead of `fa-shopping-cart`.
 * Improvement: Sticky menu logo now has more padding around it, and is slightly smaller at 30px in height.
+* Improvement: With setting up footer options, more clear default settings and instructions.
+* Improvement: Allow copyright and icon helpers in widgets and footer columns.
 * Updated: FontAwesome to 4.6.
 * Updated: FlexSlider to 2.6.
 * Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
